tests/error/op_match.gw
#! [contains] no match found for operator
var Object o;
1 +=> o;
